# 2026.nixcon.org

./: .gitignore  LICENCE.md  feedback.yaml  flake.nix  fourmolu.yaml  nixcon-website.cabal  static-assets.nix
.github/workflows/: main.yml
app/: Main.hs
app/Page/: Accommodation.hs  CodeOfConduct.hs  LegalDisclosure.hs  MainPage.hs  PrivacyPolicy.hs
export/: Main.hs  index.html  nixcon-website-export.cabal
static/: 404.html  index.html  main.js  style.css
