cabal-version: 3.0
name: nixcon-website-export
version: 0.1.0.0
homepage: https://2026.nixcon.org
license: Apache-2.0
author: ners
maintainer: ners@gmx.ch
category: Web
build-type: Simple

common common
  default-language: GHC2021
  ghc-options:
    -Weverything
    -Wno-unsafe
    -Wno-missing-safe-haskell-mode
    -Wno-missing-export-lists
    -Wno-missing-import-lists
    -Wno-missing-kind-signatures
    -Wno-all-missed-specialisations

  default-extensions:
    ApplicativeDo
    BlockArguments
    DataKinds
    DefaultSignatures
    DeriveAnyClass
    DeriveGeneric
    DerivingStrategies
    DerivingVia
    ExplicitNamespaces
    LambdaCase
    NoImplicitPrelude
    OverloadedLabels
    OverloadedRecordDot
    OverloadedStrings
    QuasiQuotes
    RecordWildCards
    RecursiveDo
    StrictData
    TypeFamilies
    ViewPatterns

executable export
  import: common
  ghc-options: -O2
  hs-source-dirs: .
  main-is: Main.hs
  build-depends:
    base,
    containers,
    data-default,
    dramaturge,
    effectful,
    exceptions,
    extra,
    filepath,
    generic-lens,
    lens,
    modern-uri,
    text,
    typed-process-effectful,
    unordered-containers,
